<resources>
    <string name="app_name">TestCalendar</string>
    <string name="prev_month"><![CDATA[<-]]></string>
    <string name="next_month"><![CDATA[->]]></string>
    <string name="current_month">Jan 2024</string>
    <string name="monday">Mon</string>
    <string name="sunday">Sun</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="weekly_text">Weekly</string>
    <string name="new_task_text">New Task</string>
    <string name="task_edit_name">Name</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="date_textview">Date: </string>
    <string name="time_textview">Time: </string>
    <string name="save_btn_text">Save</string>
    <string name="time_start_textview">"Start time: "</string>
    <string name="time_finish_textview">"Finish time: "</string>
    <string name="start_time_edit_text">Start time</string>
    <string name="finish_time_edit_text">Finish time</string>
    <string name="descriptionTV">Description</string>
    <string name="descriptionET">Write description</string>
    <string name="default_time_task">10:00</string>
    <string name="default_task_name">Task</string>
    <string name="default_task_start_finish_time">14:30 – 16:30</string>
    <string name="default_time_hour">11:00</string>
    <string name="pick_time">Pick time</string>
    <string name="delete_task">Delete task</string>
</resources>