<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="UselessParent">
        <Button
            android:id="@+id/prev_month_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:text="@string/prev_month"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/current_month_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/current_month"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/next_month_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="Suspicious0dp"
            android:layout_weight="1"
            android:text="@string/next_month"
            android:textColor="@color/white"
            android:background="@null"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textSize="16sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>
    <Button
        android:id="@+id/new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_task_text"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>