<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="8dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time_task_text_view"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_time_task"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:background="#CFCFCF"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_task_text_view"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/task_layout"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            android:background="@color/my_light_primary"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/task_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:text="@string/default_task_name"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/task_date_text_view"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/default_task_start_finish_time"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>